--- a/chat.html
+++ b/chat.html
@@ -40,10 +40,10 @@
             <div class="navbar-brand-box">
               <a href="index.html" class="logo logo-dark">
                 <span class="logo-sm">
-                  <img src="assets/images/" alt="" height="22" />
+                  <img src="assets/images/logo-sm.png" alt="" height="22" />
                 </span>
                 <span class="logo-lg">
-                  <img src="assets/images/logo-dark.png" alt="" height="20" />
+                  <img src="assets/images/logo-dark.png" alt="" height="70" />
                 </span>
               </a>
 
@@ -52,7 +52,7 @@
                   <img src="assets/images/logo-sm.png" alt="" height="22" />
                 </span>
                 <span class="logo-lg">
-                  <img src="assets/images/logo-light.png" alt="" height="20" />
+                  <img src="assets/images/logo-light.png" alt="" height="70" />
                 </span>
               </a>
             </div>
