--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
           <div class="d-flex">
             <!-- LOGO -->
             <div class="navbar-brand-box">
-              <a href="index.html" class="logo logo-dark">
+              <a href="#" class="logo logo-dark">
                 <span class="logo-sm">
                   <img src="assets/images/logo-sm.png" alt="" height="22" />
                 </span>
@@ -54,7 +54,7 @@
                 </span>
               </a>
 
-              <a href="index.html" class="logo logo-light">
+              <a href="#" class="logo logo-light">
                 <span class="logo-sm">
                   <img src="assets/images/logo-sm.png" alt="" height="22" />
                 </span>
@@ -504,7 +504,7 @@
                 </ul>
               </li>
 
-              <li class="menu-title">Components</li>
+              <!-- <li class="menu-title">Components</li>
 
               <li>
                 <a href="javascript: void(0);" class="has-arrow waves-effect">
@@ -604,8 +604,8 @@
                   <li><a href="maps-google.html">Google Maps</a></li>
                   <li><a href="maps-vector.html">Vector Maps</a></li>
                 </ul>
-              </li>
-
+              </li> -->
+              <!-- 
               <li class="menu-title">Extras</li>
 
               <li>
@@ -710,7 +710,7 @@
                     </ul>
                   </li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- Sidebar -->
