--- a/1home.html
+++ b/1home.html
@@ -35,6 +35,7 @@
       rel="stylesheet"
       type="text/css"
     />
+
   </head>
 
   <body>
@@ -397,7 +398,7 @@
       <!-- ========== Left Sidebar Start ========== -->
       <div class="vertical-menu">
         <div data-simplebar class="h-100">
-          <div class="user-sidebar text-center">
+          <div class="user-sidebar text-center " style="background-color: #cc5500;">
             <div class="dropdown">
               <div class="user-img">
                 <img
