--- a/3user-add.html
+++ b/3user-add.html
@@ -987,7 +987,7 @@
                   </div>
                   <div class="col-sm-6">
                     <div class="text-sm-end d-none d-sm-block">
-                      Copyright © 2020 <a href="http://www.dg.com/"
+                      Copyright © 2020 <a href="http://www.dg.com/" rel="noopener"
                         target="_blank"
                         >DG</a
                     </div>
