--- a/7addpage.html
+++ b/7addpage.html
@@ -561,16 +561,16 @@
                      <h4>Users</h4>
                          <ol class="breadcrumb m-0">
                              <li class="breadcrumb-item"><a href="javascript: void(0);">DG</a></li>
-                             <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>
-                             <li class="breadcrumb-item active">Users</li>
+                             <li class="breadcrumb-item"><a href="javascript: void(0);">Page</a></li>
+                             <li class="breadcrumb-item active">Add Page</li>
                          </ol>
                  </div>
              </div>
-             <div class="col-sm-6">
+             <!-- <div class="col-sm-6">
                 <div class="float-end d-none d-sm-block">
                     <a href="" class="btn btn-success">Add Widget</a>
                 </div>
-             </div>
+             </div> -->
          </div>
         </div>
      </div>
