--- a/5page.html
+++ b/5page.html
@@ -10,7 +10,7 @@
     />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" href="assets/images/logo-dark.png" />
 
     <!-- plugin css -->
     <link
