--- a/7addpage.html
+++ b/7addpage.html
@@ -558,7 +558,7 @@
          <div class="row align-items-center">
              <div class="col-sm-6">
                  <div class="page-title">
-                     <h4>Users</h4>
+                     <h4>Page</h4>
                          <ol class="breadcrumb m-0">
                              <li class="breadcrumb-item"><a href="javascript: void(0);">DG</a></li>
                              <li class="breadcrumb-item"><a href="javascript: void(0);">Page</a></li>
