--- a/7addpage.html
+++ b/7addpage.html
@@ -632,11 +632,7 @@
                         </ol>
                       </div>
                     </div>
-                    <div class="col-sm-6">
-                      <div class="float-end d-none d-sm-block">
-                        <a href="" class="btn btn-success">Add Widget</a>
-                      </div>
-                    </div>
+                    
                   </div>
                 </div>
               </div>
@@ -791,6 +787,11 @@
                               <option value="WV">West Virginia</option>
                             </optgroup>
                           </select>
+                        </div>
+                        <div class="row-sm-6">
+                          <div class="float-end d-none d-sm-block">
+                            <a href="" class="btn btn-success">Publish</a>
+                          </div>
                         </div>
                         </div>
                       </div>
