--- a/1home.html
+++ b/1home.html
@@ -401,7 +401,7 @@
                   <span>Post</span>
                 </a>
                 <ul class="sub-menu" aria-expanded="false">                  
-                  <li><a href="#">Add Post</a></li>
+                  <li><a href="10addpost.html">Add Post</a></li>
                   <li><a href="4post.html">View Post</a></li>
                 </ul>
               </li>
